mmap train and test vectors